# PCI

./: main.py  pyproject.toml  requirements.txt
PCI.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: Prey-predator.py  aggregation_armani.py  aggregation_fov.py  aggregation_math.py  aggregation_zeno.py  armani_final.py  ass_2_armani.py  ass_2_zeno.py  async_run.py  flocking.py  indigo.py  no_site_aggr.py  plots.py  zeno_final.py
