[project]
name = "PCI"
version = "0.1.0"
description = "A short description"
authors = [{name = "Your Name", email = "you@example.com"}]
requires-python = ">=3.11"
dependencies = [
    # List your dependencies here, e.g.:
    "requests",
    "numpy",
    "violet-simulator>=0.2.4",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
